--- a/mydidata/templates/mydidata/topic_detail.html
+++ b/mydidata/templates/mydidata/topic_detail.html
@@ -84,13 +84,13 @@
         <div id="cd-container" >
             <div class="ad-headers">
                 <h4 class="ad-mh m-none">Comentários...</h4>
+                <div id="comments_area"> 
+                    {% include 'mydidata/partials/comment_list.html' %}
+                </div>
                 <div class="mt-4 flex md:mt-0 md:ml-4">
                     <button type="button" hx-get="{% url 'mydidata:comment_create_form' topic.id %}" hx-target="#commentforms" hx-swap="beforeend" class="btn btn-primary">
                         Comentar
                     </button>
-                </div>
-                <div id="comments_area"> 
-                    {% include 'mydidata/partials/comment_list.html' %}
                 </div>
             </div>
         </div>
@@ -101,3 +101,9 @@
     </div>
 {% endblock %}
 <!-- Modal -->
+{% block footer_javascript_page %}
+<script type="text/javascript" src="/static/ckeditor/ckeditor-init.js" data-ckeditor-basepath="/static/ckeditor/ckeditor/" id="ckeditor-init-script"></script>
+
+<script type="text/javascript" src="/static/ckeditor/ckeditor/ckeditor.js"></script>
+
+{% endblock %}
