--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -53,6 +53,9 @@
             document.body.addEventListener('htmx:configRequest', (event)=> {
                 event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}'
             });
+            document.body.addEventListener('htmx:beforeProcessNode', (event)=> {
+               debugger;
+            });
         </script>
         
         <header>
