--- a/mydidata/templates/mydidata/partials/reply_detail.html
+++ b/mydidata/templates/mydidata/partials/reply_detail.html
@@ -1,11 +1,12 @@
 <div hx-target="this" class="mt-3 py-3 px-3 bg-white shadow border border-gray-100">
     
     <strong>
-        {{reply.author.first_name}} {{reply.author.last_name}} em
+        {{reply.author.first_name}} {{reply.author.last_name}} ({{reply.author.username}}) em
         {{reply.publish_date}}
     </strong>
     <br>
     {{reply.content | safe}}
+    {{reply.author}}
     {% if user == reply.author or user.is_superuser%}
         <div class="mt-2">
             <button hx-get="{% url 'mydidata:reply_update' reply.id %}" hx-swap="outerHTML"
