--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -48,13 +48,10 @@
         <!-- <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" rel="stylesheet"> -->
     </head>
     
-    <body onpaste="return false">
+    <body>
         <script>
             document.body.addEventListener('htmx:configRequest', (event)=> {
                 event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}'
-            });
-            document.body.addEventListener('htmx:beforeProcessNode', (event)=> {
-               debugger;
             });
         </script>
         
