--- a/mydidata/templates/mydidata/profile_detail.html
+++ b/mydidata/templates/mydidata/profile_detail.html
@@ -28,7 +28,7 @@
                 <div class="col-lg-4">
                   <div class="card mb-4">
                     <div class="card-body text-center">
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
+                      <img src="/static/images/profile.jpg" alt="avatar"
                         class="rounded-circle img-fluid" style="width: 150px;">
                       <h5 class="my-3">{{student.first_name}} {{student.last_name}} ({{student.username}})</h5>
                         {% for classroom in student.classrooms.all%}
@@ -138,33 +138,31 @@
                     <div class="col-md-6">
                       <div class="card mb-4 mb-md-0">
                         <div class="card-body">
-                          <p class="mb-4"><span class="text-primary font-italic me-1">Progresso</span>
+                          <p class="mb-4"><span class="text-primary font-italic me-1">Conquistas</span>
                           </p>
-                          <p class="mb-1" style="font-size: .77rem;">Web Design</p>
-                          <div class="progress rounded" style="height: 5px;">
-                            <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80"
-                              aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                          <p class="mt-4 mb-1" style="font-size: .77rem;">Website Markup</p>
-                          <div class="progress rounded" style="height: 5px;">
-                            <div class="progress-bar" role="progressbar" style="width: 72%" aria-valuenow="72"
-                              aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                          <p class="mt-4 mb-1" style="font-size: .77rem;">One Page</p>
-                          <div class="progress rounded" style="height: 5px;">
-                            <div class="progress-bar" role="progressbar" style="width: 89%" aria-valuenow="89"
-                              aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                          <p class="mt-4 mb-1" style="font-size: .77rem;">Mobile Template</p>
-                          <div class="progress rounded" style="height: 5px;">
-                            <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55"
-                              aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                          <p class="mt-4 mb-1" style="font-size: .77rem;">Backend API</p>
-                          <div class="progress rounded mb-2" style="height: 5px;">
-                            <div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66"
-                              aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
+                          <p class="mb-1" style="font-size: .77rem;">{{student.profile.badges}}</p>
+                          <p class="mb-1" style="font-size: .77rem;">Interesse</p>
+                            
+                            {% for badge_path in interest_badges%}
+                          
+                              <img width="20%" src="{{badge_path}}" alt="Badge 1">
+                            {%endfor%}
+                          
+                          <p class="mt-4 mb-1" style="font-size: .77rem;">Participação</p>
+                          {% for badge_path in particip_badges%}
+                          
+                            <img width="20%" src="{{badge_path}}" alt="Badge 1">
+                          {%endfor%}
+                          <p class="mt-4 mb-1" style="font-size: .77rem;">Colaboração</p>
+                          {% for badge_path in colab_badges%}
+                          
+                            <img width="20%" src="{{badge_path}}" alt="Badge 1">
+                          {%endfor%}
+                          <p class="mt-4 mb-1" style="font-size: .77rem;">Criatividade</p>
+                          {% for badge_path in creative_badges%}
+                          
+                            <img width="20%" src="{{badge_path}}" alt="Badge 1">
+                          {%endfor%}
                         </div>
                       </div>
                     </div>
