trying to correct badge images

--- a/mydidata/static/css/mydidata.css
+++ b/mydidata/static/css/mydidata.css
@@ -27,7 +27,7 @@ main {
   animation: fadein-and-spin 3s ease-in-out forwards;
   opacity: 0;
   transform: rotate(0deg);
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 30%;
   transform: translate(-50%, -50%);
