--- a/mydidata/templates/mydidata/partials/comment_list.html
+++ b/mydidata/templates/mydidata/partials/comment_list.html
@@ -6,8 +6,12 @@
         {%get_badge_img badge as badge_path%}
         {%get_badge_name badge as badge_name%}
         <div class="overlay" onclick="this.style.animation = 'fadeout 0.5s ease-in-out forwards'; document.querySelector('.medal-icon').style.animation = 'fadeout-and-spin 3s ease-in-out forwards'; this.style.display = 'none'">
-            <div class="text">{{badge_name}}</div>
-            <img class="second-slide medal-icon" onclick="this.style.animation = 'fadeout-and-spin 3s ease-in-out forwards'" src="{{badge_path}}" alt="Second slide">
+            <div id="badge-container">
+                <p>{{badge_name}}</p>
+                <img  onclick="this.style.animation = 'fadeout-and-spin 3s ease-in-out forwards'" src="{{badge_path}}" alt="Second slide">
+                <!-- <p>Hello</p> -->
+                <!-- <img  onclick="this.style.animation = 'fadeout-and-spin 3s ease-in-out forwards'" src="/static/images/steel_badge.png" alt="Second slide">  -->
+            </div>
         </div>
         
     {%endif%}
