--- a/mydidata/templates/mydidata/post_list.html
+++ b/mydidata/templates/mydidata/post_list.html
@@ -8,15 +8,14 @@
             <div id="al-control">
                 <h3 class="ad-mh">
                     Fórum do Tópico {{topic.topic_title}}
-                    <span class="pull-right">
-                        <a href="{% url 'mydidata:post_create' topic.id %}"
-                           class="btn btn-link p-r-none">+ Criar Novo Post</a>
-                    </span>
+                    
+                    
                 </h3>
                 {# Account Search Form #}
             </div>
             {# List of Accounts #}
-            
+            <a href="{% url 'mydidata:post_create' topic.id %}"
+            class="btn btn-primary p-r-none">+ Criar Novo Post</a>
             <div class="list-group" style="margin-bottom: 1rem;">
                 {% for post in posts %}
                         <a href="{{ post.get_absolute_url }}" class="list-group-item list-group-item-action"><strong>{{ post.title }}</strong></a>
