--- a/mydidata/templates/mydidata/profile_detail.html
+++ b/mydidata/templates/mydidata/profile_detail.html
@@ -40,26 +40,32 @@
                       </div>
                     </div>
                   </div>
-                  <div class="card mb-4 mb-lg-0">
-                    <div class="card-body p-0">
-                      <ul class="list-group list-group-flush rounded-3">
-                        <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                          <i class="fas fa-globe fa-lg text-warning"></i>
-                          <p class="mb-0">Home Page</p>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                          <i class="fab fa-github fa-lg" style="color: #333333;"></i>
-                          <p class="mb-0">Instagram</p>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                          <i class="fab fa-twitter fa-lg" style="color: #55acee;"></i>
-                          <p class="mb-0">Facebook</p>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                          <i class="fab fa-instagram fa-lg" style="color: #ac2bac;"></i>
-                          <p class="mb-0">Linkedin</p>
-                        </li>
-                      </ul>
+                  <div class="card mb-4 mb-md-0">
+                    <div class="card-body">
+                      <p class="mb-4"><span class="text-primary font-italic me-1">CONQUISTAS</span>
+                      </p>
+                      <p class="mb-1" class="text-primary font-italic me-1" >Interesse</p>
+                        
+                        {% for badge_path in interest_badges%}
+                      
+                          <img width="20%" src="{{badge_path}}" alt="Badge 1">
+                        {%endfor%}
+                      
+                      <p class="mt-4 mb-1" class="text-primary font-italic me-1" >Participação</p>
+                      {% for badge_path in particip_badges%}
+                      
+                        <img width="20%" src="{{badge_path}}" alt="Badge 1">
+                      {%endfor%}
+                      <p class="mt-4 mb-1" class="text-primary font-italic me-1" >Colaboração</p>
+                      {% for badge_path in colab_badges%}
+                      
+                        <img width="20%" src="{{badge_path}}" alt="Badge 1">
+                      {%endfor%}
+                      <p class="mt-4 mb-1" class="text-primary font-italic me-1" >Criatividade</p>
+                      {% for badge_path in creative_badges%}
+                      
+                        <img width="20%" src="{{badge_path}}" alt="Badge 1">
+                      {%endfor%}
                     </div>
                   </div>
                 </div>
@@ -125,6 +131,35 @@
                     <div class="col-md-6">
                       <div class="card mb-4 mb-md-0">
                         <div class="card-body">
+                          <p class="mb-4"><span class="text-primary font-italic me-1">Respostas em Fórum</span>
+                          </p>
+                          {% for reply in replies%}
+                            {% include "mydidata/partials/reply_detail.html" %}
+                          {% endfor%}
+                          
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-4 mb-md-0">
+                          <div class="card-body">
+                            <p class="mb-4"><span class="text-primary font-italic me-1">Comentários em Tópicos</span>
+                            </p>
+                              
+                              {% for comment in comments%}
+                                {% include "mydidata/partials/comment_detail.html" %}
+                                
+                              {%endfor%}
+                            
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-8">
+                      <div class="card mb-4 mb-md-0">
+                        <div class="card-body">
                           <p class="mb-4"><span class="text-primary font-italic me-1">Atividades</span>
                           </p>
                           {% for atv in activities%}
@@ -132,37 +167,6 @@
                             <hr>
                           {% endfor%}
                           
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="card mb-4 mb-md-0">
-                        <div class="card-body">
-                          <p class="mb-4"><span class="text-primary font-italic me-1">Conquistas</span>
-                          </p>
-                          <p class="mb-1" style="font-size: .77rem;">{{student.profile.badges}}</p>
-                          <p class="mb-1" style="font-size: .77rem;">Interesse</p>
-                            
-                            {% for badge_path in interest_badges%}
-                          
-                              <img width="20%" src="{{badge_path}}" alt="Badge 1">
-                            {%endfor%}
-                          
-                          <p class="mt-4 mb-1" style="font-size: .77rem;">Participação</p>
-                          {% for badge_path in particip_badges%}
-                          
-                            <img width="20%" src="{{badge_path}}" alt="Badge 1">
-                          {%endfor%}
-                          <p class="mt-4 mb-1" style="font-size: .77rem;">Colaboração</p>
-                          {% for badge_path in colab_badges%}
-                          
-                            <img width="20%" src="{{badge_path}}" alt="Badge 1">
-                          {%endfor%}
-                          <p class="mt-4 mb-1" style="font-size: .77rem;">Criatividade</p>
-                          {% for badge_path in creative_badges%}
-                          
-                            <img width="20%" src="{{badge_path}}" alt="Badge 1">
-                          {%endfor%}
                         </div>
                       </div>
                     </div>
