--- a/mydidata/templates/mydidata/discursive_answer_detail.html
+++ b/mydidata/templates/mydidata/discursive_answer_detail.html
@@ -34,12 +34,25 @@
                     <div class="col-md-9">
                         <h3 class="gi-sh">Resposta</h3> 
                         (<a href="{{ answer.question.get_answer_url }}" class="p-r-none">Editar <i class="bi bi-pencil-square"></i></a>)
+                        {% if user.is_superuser %}
+                
+                            <a  href="{% url 'mydidata:feedback' answer.id %}"
+                                                  class="btn btn-primary p-r-none">Avaliar</a>
+                        {% endif%}
                         <p>{{ answer.answer_text | safe}}
                             
                         </p>
                         <p>{{ answer.file_link | safe }}</p>
 
                         
+                    </div>
+                    <div>
+                        {%if answer.is_graphic_answer%}
+                            {%if answer.graphic_annotations%}
+                                <h3> Correções na Imagem</h3>
+                            {%endif%}
+                            {%include 'mydidata/graphic_feedback.html'%}
+                        {% endif %}
                     </div>
                     <div class="col-md-9">
                         <span><strong> Enviada por: </strong></span>
@@ -72,15 +85,6 @@
 
                     {% endif %}
                     </div>                    
-                    
-                    {% if user.is_superuser %}
-                        <div class="col-md-9"> <a href="{% url 'mydidata:feedback' answer.id %}"
-                                                  class="p-r-none">Fornecer Feedback</a>
-                    {% endif%}
-                    
-                    
-                    
-                    
                     
                     </div>
 
